@@ -1,3 +1,8 @@
+2020-01-20  Richard Biener  <rguenther@suse.de>
+
+	PR debug/92763
+	* g++.dg/debug/pr92763.C: New testcase.
+
 2020-01-20  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/92536
