@@ -1,3 +1,9 @@
+2020-01-20  Richard Biener  <rguenther@suse.de>
+
+	PR debug/92763
+	* dwarf2out.c (prune_unused_types): Unconditionally mark
+	called function DIEs.
+
 2020-01-20  Martin Liska  <mliska@suse.cz>
 
 	PR tree-optimization/93199
